Repiared small bugs in guestPage and deleted letterspacing on features dashboard

--- a/client/src/styles/layout/_features.scss
+++ b/client/src/styles/layout/_features.scss
@@ -56,13 +56,13 @@
         margin: 0.5rem 0;
         color: $color-grey-light-1;
         font-weight: 300;
-        letter-spacing: 2px;
+
         @media only screen and (max-width: $bp-500) {
           font-size: 1.8rem;
         }
       }
       &__paragraph {
-        font-size: 1.4rem;
+        font-size: 1.2rem;
         padding: 0 0.5rem;
         color: $color-grey-light-1;
         font-weight: 300;
